test/tests/NonParameterizedGeneric.expected
NonParameterizedGeneric.panda:2:15: error: 'panda.collections.Collection' expected 1 generic parameter, but found 0
NonParameterizedGeneric.panda:4:33: error: 'panda.collections.Array' expected 1 generic parameter, but found 0
2 errors
