test/tests/NonParameterizedGeneric.panda
class NonParameterizedGeneric {
    def error:Collection

    def error2 := Array<Int>()->Array
}